css/shiroma-custom.css
body {
    width: 100%;
    height: 100%;
    font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
    color: #555;
}

html {
    width: 100%;
    height: 100%;
}

h1, h2, h3, h4, h5, h6 {
    margin: 0 0 35px;
    font-family: 'Playfair Display', 'Georgia', serif;
    letter-spacing: 1px;
}

h2 { font-size: 400% }

p {
    margin: 0 0 25px;
    font-size: 18px;
    line-height: 1.5;
}

@media(min-width:767px) {
    p {
        margin: 0 0 35px;
        font-size: 20px;
        line-height: 1.6;
    }
}

a {
    color: #16a095;/*#1abcad;*/
    -webkit-transition: all .25s ease-in-out;
    -moz-transition: all .25s ease-in-out;
}

a:hover,
a:focus {
    text-decoration: none;
    color: #3adccd;
}

.light { font-weight: 400 }

.navbar-custom {
    margin-bottom: 0;
    font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
    font-size: 125%;
    background-color: rgba(20,30,50,.7); /* #141ee2 */
}

.navbar-custom .navbar-brand { font-weight: 500 }

.navbar-custom .navbar-brand .navbar-toggle {
    padding: 4px 6px;
    font-size: 16px;
    color: #fff;
}

.navbar-toggle i { color: #fff }

.navbar-custom a { color: #fff }

/* selected nav area text "glow" */
.navbar-custom .nav li.active,
.navbar-custom .nav li a:hover,
.navbar-custom .nav li a:focus,
.navbar-custom .nav li a.active {
    outline: 0;
    background-color: transparent;
    text-shadow: 0 0 1px #fff, 0 0 12px #fff, 0 0 30px #0ff, 0 0 40px #0cc, 0 0 60px #0aa;
}

@media(min-width:767px) {
    .navbar {
        padding: 20px 0;
        background: 0 0;
        -webkit-transition: background .5s ease-in-out,padding .5s ease-in-out;
        -moz-transition: background .5s ease-in-out,padding .5s ease-in-out;
        transition: background .5s ease-in-out,padding .5s ease-in-out;
    }

    .top-nav-collapse {
        padding: 0;
        background-color: rgba(20,30,50,.5);
    }
}

.intro,
.banner,
footer {
    color: #fff;
    width: 100%;
    background-color: #000;
    background-repeat: no-repeat; 
    background-attachment: scroll;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    background-size: cover;
    -o-background-size: cover;
}

.intro {
    display: table;
    height: 100%;/*auto;*/
    padding: 100px 0;
    text-align: center;
    background: url(../img/bg/intro-bg.jpg) no-repeat bottom center scroll;
}
footer {
    font-family: 'Playfair Display', 'Georgia', serif;
    background: url(../img/bg/intro-bg.jpg) no-repeat scroll;
    padding: 25px 0 1px 0;
    margin-bottom: 0px;
}
@media(min-width: 1921px) {
    .intro, footer {
        background: url(../img/bg/intro-bg-large.jpg);
        -webkit-background-size: 100% auto;
        -moz-background-size: 100% auto;
        background-size: 100% auto;
    }
}


.intro .intro-body {
    display: table-cell;
    vertical-align: middle;
}

.intro .intro-body .brand-heading { font-size: 40px }
.intro .intro-body .intro-text { font-size: 18px }

@media(min-width:768px) {
    .intro .intro-body .brand-heading { font-size: 100px }
    .intro .intro-body .intro-text { font-size: 25px }
}
@media(min-width:1200px) {
    .intro, .banner, footer {
        background-attachment: fixed;
     }
}

#banner-sig {
  width: 100%;
  height: auto;
  max-width: 750px;
}

#nav-signature {
    width: 140px;
    margin-top: -10px;
    visibility: hidden;
}
.top-nav-collapse #nav-signature {
    visibility: visible;
}

.btn-circle {
    width: 70px;
    height: 70px;
    margin-top: 15px;
    padding: 7px 16px;
    border: 2px solid #fff;
    border-radius: 35px;
    font-size: 40px;
    color: #fff;
    background: rgba(255,255,255,.1);
    -webkit-transition: background .3s ease-in-out;
    -moz-transition: background .3s ease-in-out;
    transition: background .3s ease-in-out;
}

.btn-circle:hover,
.btn-circle:focus {
    outline: 0;
    color: #fff;
    background: rgba(255,255,255,.25);
}

footer .btn-circle {
    width: 50px;
    height: 50px;
    border-radius: 25px;
    font-size: 28px;
    padding: 5px 6px;
}
footer a { color: #fff }

.btn-circle i.animated {
    -webkit-transition-property: -webkit-transform;
    -webkit-transition-duration: 1s;
    -moz-transition-property: -moz-transform;
    -moz-transition-duration: 1s;
}

.btn-circle:hover i.animated {
    -webkit-animation-name: pulse;
    -moz-animation-name: pulse;
    -webkit-animation-duration: 1.7s;
    -moz-animation-duration: 1.7s;
    -webkit-animation-iteration-count: infinite;
    -moz-animation-iteration-count: infinite;
    -webkit-animation-timing-function: linear;
    -moz-animation-timing-function: linear;
}

@-webkit-keyframes pulse {    
    0 {
        -webkit-transform: scale(1);
        transform: scale(1);
    }

    50% {
        -webkit-transform: scale(1.3);
        transform: scale(1.3);
    }

    100% {
        -webkit-transform: scale(1);
        transform: scale(1);
    }
}

@-moz-keyframes pulse {    
    0 {
        -moz-transform: scale(1);
        transform: scale(1);
    }

    50% {
        -moz-transform: scale(1.3);
        transform: scale(1.3);
    }

    100% {
        -moz-transform: scale(1);
        transform: scale(1);
    }
}

.content-section {
    padding-top: 125px;
    padding-bottom: 75px;
}

.content-section h2 {
    color: #222255;
}

@media(min-width:1200px) {
    .content-section {
        padding-top: 100px;
    }
}

.btn {
    font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
    font-weight: 400;
    -webkit-transition: all .3s ease-in-out;
    -moz-transition: all .3s ease-in-out;
    transition: all .3s ease-in-out;
}

.btn-default {
    border: 1px solid #16a095;
    color: #16a095;
    background-color: transparent;
}

.btn-default:hover,
.btn-default:focus {
    border: 1px solid #3adccd;
    outline: 0;
    color: #fff;
    background-color: #3adccd;
}

ul.banner-social-buttons { margin-top: 0 }

@media(max-width:1199px) {
    ul.banner-social-buttons { margin-top: 15px }
}

@media(max-width:767px) {
    ul.banner-social-buttons li {
        display: block;
        margin-bottom: 20px;
        padding: 0;
    }

    ul.banner-social-buttons li:last-child { margin-bottom: 0 }
}

::-moz-selection {
    text-shadow: none;
    background: #fcfcfc;
    background: rgba(255,255,255,.2);
}

::selection {
    text-shadow: none;
    background: #fcfcfc;
    background: rgba(255,255,255,.2);
}

img::selection { background: 0 0 }

img::-moz-selection { background: 0 0 }

body { webkit-tap-highlight-color: rgba(255,255,255,.2) }

/* GALLERY STUFF **********************************************/
.gallery {
  margin-left: auto;
  margin-right: auto;
  overflow: auto;
  padding: 40px 0;
}
.gallery-image {
  height: auto;
  padding: 3px;
  margin: 0px;
}
.gallery + h2 {
  margin-top: 25px;
}
.highlight-opacity,
.highlight-opacity:hover {
  opacity: 1.0;
  filter:alpha(opacity=100);
  -webkit-transition: all .4s;
  -moz-transition: all .4s;
  transition: 0.4s;
}
.highlight-opacity:hover { opacity:0.5 }

.circle-bound {
  -webkit-border-radius: 50%;
  -moz-border-radius: 50%;
  border-radius: 50%;
  overflow: hidden;
}

.add-v-spacing {
  padding: 1em 0;
  margin: 0 ;
  overflow: auto;
}

/* COVER/JUMOBTRON BACKGROUNDS ********************************/
.banner {
  color: #fff;
  height: 350px;
  padding-top: 150px;
  margin: 0px;
}
.banner h1 { font-size: 500% }

#banner-experience { background-image: url("../img/bg/partners-bg.jpg");}
#banner-design { background-image: url("../img/bg/wet-metal-bg.jpg");}


/* EXPERIENCE BULLETS *****************************************/
.x-point,
.x-point:hover {
    border-radius: 10px;
    color: #444;
    padding: 40px 3px;;
    margin: 40px 0;
}

.x-point h1
.x-point h2,
.x-point h4 {
    font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
    text-align: center; 
}
.x-point h3 {
    font-weight: bold;
    font-size: 300%;
    line-height: 200%;
    margin: 5px;
    text-align: center;
}
.x-point .title-may-wrap { line-height: 100%; margin-bottom: 1em }
.x-point h4 { margin-bottom: 0.25em }
.x-point h4 + h4 { margin-bottom: 1em }

.x-point ul {
    text-align: left;
    height: 5em;
}
.x-point img { width: 70% }

div.x-logo,
div.x-logo:hover {
    width: 100%;
    background-repeat: no-repeat;
    background-position: center center;
    background-size: 70%;
    -webkit-transition: all .4s ease-in-out;
    -moz-transition: all .4s ease-in-out;
    transition: all .4s ease-in-out;
}

#resume-pdf { text-align: center }

.x-point-content { margin: 0px }

@media(min-width:768px) {
    div.x-logo,
    div.x-logo:hover {
        float: left;
        min-width: 420px;
        width: 40%;
    }
    .x-point-content {
        margin-left: 1em;
        margin-right: 1em;
    }
    .x-point h3,
    .x-point h4 {
        text-align: left;
    }
    #resume-pdf { text-align: right }
}

/* custom backgrounds; icon changes whenever hover over whole card */
/* Google full-time and Twitter small since in the future */
#google-logo, .x-point:hover #google-logo, #twitter-logo, .x-point:hover #twitter-logo {
    background-size: 175px;
} 
#google-logo, .x-point:hover #google-logo { background-image: url("../img/icons/google-color.png") }
#twitter-logo, .x-point:hover #twitter-logo { background-image: url("../img/icons/twitter-color.png") }
#adwords-logo, .x-point:hover #adwords-logo { background-image: url("../img/icons/adwords-color.png");}
#cozi-logo, .x-point:hover #cozi-logo { background-image: url("../img/icons/cozi-color.png");}
#cse-logo, .x-point:hover #cse-logo { background-image: url("../img/icons/cse-color.png");}
#api-logo, .x-point:hover #api-logo { background-image: url("../img/icons/api-color.png");}


@media (min-width: 768px) {     /* no hover stuff on mobile */
    .x-point { color: #888 }
    #google-logo { background-image: url("../img/icons/google-grey.png");}
    #twitter-logo { background-image: url("../img/icons/twitter-grey.png");}
    #adwords-logo { background-image: url("../img/icons/adwords-grey.png");}
    #cozi-logo { background-image: url("../img/icons/cozi-grey.png");}
    #cse-logo { background-image: url("../img/icons/cse-grey.png");}
    #api-logo { background-image: url("../img/icons/api-grey.png");
}

